[package]
name = "nessu-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", rev = "8b3d218f4ba3f92ae72064472aad605afdc1645f" }
nessu-lib = { path = "../nessu-lib" }
pretty_env_logger = { version = "0.4.0", optional = true }
log = "0.4.17"

[features]
logging = ["nessu-lib/logging", "pretty_env_logger"]